<resources>
    <string name="app_name">家政中心</string>
    <!--login_layout.xml-->
    <string name="login_name">请输入登陆名或手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_word">登录</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_regedit">注册账号></string>
    <string name="LOG">CopyRigit@ 合肥江湖信息科技有限公司</string>
    <!--phoneyz_layout.xml-->
    <string name="sjyz">手机号码验证</string>
    <string name="next">下一步</string>
    <!--regedit_layout.xml-->
    <string name="yonghuzhuce">用户注册</string>
    <string name="set_name">用户名</string>
    <string name="set_pwd">密码</string>
    <string name="set_pwd2">密码确认</string>
    <string name="set_phone">输入关联手机号</string>
    <string name="set_authCode">请输入验证码</string>
    <string name="authCodBtn">获取验证码</string>
    <string name="regeditSubmit">注册</string>
    <!--resetpwd_layout.xml-->
    <string name="reset_Pwd">找回密码</string>
    <string name="reset_resetName">请输入用户名</string>
    <string name="reset_resetPwd">新密码</string>
    <string name="reset_resetPwd2">确认密码</string>
    <string name="reset_Submit">重置密码</string>
    <!--loginActivity.java-->
    <string name="info_login">请填写用户名或密码！</string>
    <string name="info_fail">验证失败</string>
    <string name="info_success">验证成功</string>
    <!--ResetActivity.java-->
    <string name="info_phone">请输入关联手机号！</string>
    <string name="info_phone2">您输入的关联手机号错误！</string>
    <string name="info_YZM">请输入验证码！</string>
    <string name="info_regedit">注册信息未填写完整！</string>
    <string name="info_decidePwd">密码验证错误！</string>
    <string name="reSend">重新发送</string>
    <string name="failed">验证失败，请重新验证</string>
    <string name="failed1">验证码还未发送,请稍后...</string>
    <string name="seccess">手机号已验证成功</string>
    <string name="seccess1">恭喜注册成功!!!</string>
    <string name="failed2">注册失败</string>

    <!--fragmentOrder.java-->
    <string name="weichuli">未处理</string>
    <string name="weifukuan">未付款</string>
    <string name="all">全部</string>
</resources>

