<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sjyz"
                android:textSize="25dp"
                android:textColor="@color/colorBlue"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_getphone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/set_phone"
                android:maxLength="18"
                android:numeric="integer"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite">
            /*验证码*/
            <EditText
                android:id="@+id/edit_inputYZM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:hint="@string/set_authCode"
                android:maxLength="9"
                android:numeric="integer"/>
            /*获取验证码*/
            <Button
                android:id="@+id/btn_getYZM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authCodBtn"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            /*注册按钮*/
            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:text="@string/next"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
