<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorGray">

    /*注册面板*/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yonghuzhuce"
                android:textSize="25dp"
                android:textColor="@color/colorBlue"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            /*用户名*/
            <EditText
                android:id="@+id/edit_setName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/set_name"
                android:maxLength="15"/>
            /*密码*/
            <EditText
                android:id="@+id/edit_setPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/set_pwd"
                android:password="true"
                android:maxLength="20"/>
            /*密码确认*/
            <EditText
                android:id="@+id/edit_setPwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/set_pwd2"
                android:password="true"
                android:maxLength="20"/>
          <!--  /*联系电话*/
            <EditText
                android:id="@+id/edit_regeditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_phone"
                android:maxLength="18"
                android:numeric="integer"/>-->
        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            /*验证码*/
            <EditText
                android:id="@+id/edit_regeditYZM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="15dp"
                android:hint="@string/set_authCode"
                android:maxLength="9"
                android:numeric="integer"/>
            /*获取验证码*/
            <Button
                android:id="@+id/btn_regeditGetYZM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authCodBtn"
                android:background="@color/colorBlue"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            /*注册按钮*/
            <Button
                android:id="@+id/btn_regedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:text="@string/regeditSubmit"/>
        </LinearLayout>
    </LinearLayout>
    /*公司LOG*/
    <include layout="@layout/log_layout"/>
</LinearLayout>
